# sdf-mbd

./: .gitignore  CMakeLists.txt  README.md
assets/onset_stress_b/: onset_stress_b_model.json
paper_example/: README.md  check_paper_examples.py  manifest.json  paper_examples_openvdb.cpp  plot_paper_examples.py  run_paper_examples.ps1
reports/milestone_01/: README_baseline.md  acceptance_report.md
reports/milestone_02/: README_openvdb_probe.md  acceptance_report.md
reports/milestone_03/: README_sdf_point_contact.md  acceptance_report.md
reports/milestone_03_5/: README_geometry_consistency.md  acceptance_report.md
reports/milestone_03_6/: README_openvdb_reintegration.md  acceptance_report.md
reports/milestone_04/: README_patch_contact.md  acceptance_report.md
reports/milestone_05/: README_patch_force.md  acceptance_report.md
reports/milestone_05_5/: acceptance_report.md
reports/milestone_06/: README_patch_constitutive.md  README_patch_tracking.md  acceptance_report.md
reports/milestone_07/: README_patch_constitutive_cases.md  acceptance_report.md
reports/milestone_09/: README_patch_constitutive_tangential.md  README_patch_stickslip.md  acceptance_report.md
reports/milestone_10/: README_patch_frame_kinematics.md  acceptance_report.md
reports/milestone_11/: README_patch_transport_limited.md  acceptance_report.md
reports/milestone_12/: README_patch_transport_ablation.md  acceptance_report.md
reports/milestone_13/: README_patch_adaptive_carryover.md  acceptance_report.md  project_acceptance_report.md
reports/milestone_14/: README_field_contact_primitives_core.md
reports/milestone_15/: README_field_contact_split_merge.md
reports/milestone_16/: README_field_contact_runtime.md
reports/milestone_17/: README_field_contact_objectivity.md
reports/milestone_18/: README_field_contact_symmetric_pair.md
reports/milestone_19/: README_field_contact_topology_metrics.md
reports/milestone_20/: README_field_contact_feature_switching.md
reports/milestone_21/: README_field_contact_multislip_interlock.md
reports/milestone_22/: README_field_contact_baselines_figures.md
scripts/: check_cad_mesh_case_study.py  check_chrono_original_mesh_baseline.py  check_field_contact_acceptance.py  check_free_dynamics_response.py  check_matched_mesh_baseline.py  compare_chrono_native_field.py  generate_cad_mesh_case_study_figures.py  generate_field_contact_figures.py  generate_paper_results.py  plot_friction_validation.py  plot_jcnd_validation.py
src/: CMakeLists.txt
src/demos/core/: CMakeLists.txt  demo_CH_baseline_contact.cpp  demo_CH_chrono_native_contact_baseline.cpp  demo_CH_field_contact_cad_mesh_case_study_openvdb.cpp  demo_CH_field_contact_chrono_original_mesh_baseline_openvdb.cpp  demo_CH_field_contact_feature_switching.cpp  demo_CH_field_contact_free_dynamics_openvdb.cpp  demo_CH_field_contact_matched_mesh_native_openvdb.cpp  demo_CH_field_contact_mesh_sdf_nonconvex_openvdb.cpp  demo_CH_field_contact_multislip_interlock.cpp  demo_CH_field_contact_primitives_openvdb.cpp  demo_CH_field_contact_regression.cpp  demo_CH_field_contact_split_merge_openvdb.cpp  demo_CH_friction_validation.cpp  demo_CH_openvdb_probe.cpp  demo_CH_rev_joint_clearance_openvdb.cpp  demo_CH_sdf_patch_adaptive_carryover_openvdb.cpp  demo_CH_sdf_patch_constitutive_cases_openvdb.cpp  demo_CH_sdf_patch_constitutive_frame_openvdb.cpp  demo_CH_sdf_patch_constitutive_openvdb.cpp  demo_CH_sdf_patch_constitutive_stickslip_openvdb.cpp  demo_CH_sdf_patch_constitutive_tangential_openvdb.cpp  demo_CH_sdf_patch_constitutive_transport_limited_openvdb.cpp  demo_CH_sdf_patch_contact_openvdb.cpp  demo_CH_sdf_patch_force_openvdb.cpp  demo_CH_sdf_patch_persistence_openvdb.cpp  demo_CH_sdf_patch_tangential_history_v1_openvdb.cpp  demo_CH_sdf_patch_transport_ablation_openvdb.cpp  demo_CH_sdf_point_contact.cpp  demo_CH_sdf_point_contact_openvdb.cpp  demo_CH_simple_gear_openvdb.cpp
(+18 files in other folders)
